# 3rd-Semester

Uni-Comp-System/Practice1/: bai1  bai1.cpp  bai2  bai2.cpp
Uni-Comp-System/Practice2/: main.cpp
Uni-Comp-System/Practice3/: bt1.asm  bt2.asm  bt3.asm  bt4.asm  bt5.asm
Uni-Comp-System/Practice4/: bai1.asm  bai2.asm  bai3.asm  bai4.asm  bai5.asm
Uni-DB/: 21120511@2.sql  21120511@3.sql  21120511@4.sql  21120511@5.sql  21120511@6.sql  21120511@7.sql  21120511@8_BTTL.sql  21120511@8_BTVN.sql  deleteTable.sql
Uni-MforAI/: 21120511.ipynb
Uni-MforAI/Week2/: LeNguyen-21120511.ipynb
Uni-MforAI/Week3/: main.tex  master.tex  preamble.tex
Uni-MforAI/Week4/: 21120511-LeNguyen.ipynb
Uni-OOP/Week1/: CMakeLists.txt  main.cpp
Uni-OOP/Week1/bai1/: bai1.cpp  bai1.h  poly.cpp  poly.h
Uni-OOP/Week1/bai2/: bai2.cpp  bai2.h  triangle.cpp  triangle.h
Uni-OOP/Week1/bai3/: bai3.cpp  bai3.h  bignum.cpp  bignum.h
Uni-OOP/Week2/: fraction.h
Uni-OOP/Week3/: CMakeLists.txt  input.txt  main.cpp  output.txt  qlsinhvien.cpp  qlsinhvien.h  sinhvien.cpp  sinhvien.h
Uni-OOP/Week3/bai1/: main.cpp  myintarray.cpp  myintarray.h
Uni-OOP/Week3/bai2/: input.txt  main.cpp  mangps.cpp  mangps.h  output.txt  phanso.cpp  phanso.h
Uni-OOP/Week3/bai3/: dathuc.cpp  dathuc.h  donthuc.cpp  donthuc.h
Uni-OOP/Week3/include/: danhsachsv.h  helper.h  qlsinhvien.h  sinhvien.h
Uni-OOP/Week3/test/: mylist  mylist.cpp
Uni-OOP/Week7/: InputException.h  congty.cpp  nhanvien.cpp  nhanvien.h  nvcongnhat.cpp  nvcongnhat.h  nvsanxuat.cpp
Uni-OOP/Week8/: movie.h  (+4 more)
Uni-py/: week1.ipynb  week2.ipynb
(+72 files in other folders)
